2009-01-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c:
	  Don't leave the app view if the user clicks the place of the tasks
	  button while a dialog is showing.  The buttons were unreactive but
	  the current home view reacted and switched the state.

2009-01-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Don't leave tasw when a new dialog is mapped, except if it's
	  system modal.

2009-01-14  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/Makefile.am: add hd-decor.*
	* src/mb/hd-decor.[ch]: subclass of MBWMDecor which knows about progress
          indicators
	* src/mb/hd-theme.c: make progress indicator per decor rather than
          global

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-gtk-utils.c:
	  Added flag to force 16 bit textures when loaded from GTK (was 32 
          bit previously)
        * debian/control:
	  Increase version requirement for clutter

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.h
	* src/mb/hd-comp-mgr.c:
	  Stopped Notes blurring the background
	  Stopped update_area when in task launcher (eg. from applets) as it
	  is hard to update the blur texture properly.

	* src/tidy/tidy-blur-group.c:
	  Added Pierre-Luc's modified blur shader that compiles under GL

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Fixed problem where while buttons weren't visible in FKB, they
	  could still be pressed

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Fixed status area + button problem over FKB by looking for
	  fullscreen flag on windows above the status area window

2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.16

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	* src/home/hd-render-manager.h: